--- a/about.html
+++ b/about.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>lorrem</h1>
+    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non vel est vero voluptate perspiciatis sint cumque
+        ex, quod magni eveniet magnam. Et itaque nihil mollitia eligendi ducimus sunt ex ea nulla, repellat ipsam beatae
+        aperiam recusandae, enim quam reprehenderit facilis. Sed neque, quas quasi praesentium in quaerat adipisci
+        perferendis fuga.
+    </h1>
 </body>
+
 </html>
